# PyrOS

./: fs.py  main.py  pyproject.toml
accounts/: guest.json
apps/: snake.py  typing.py
